--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+body
+  position: relative;
+  min-height: 100vh;
+  overflow-x: hidden;
+
+.center
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;-webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
